data/derived/sp14/progs/unify/prog3820.ml.out
Characters 63-70:
  wwhile ((b', c) ,b);;
          ^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
